// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager gas tests ERC20 tokens #initialize initialize pool with no hooks and no protocol fee 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 54665,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint above current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 158172,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint above current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 217915,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint above current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 158172,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint around current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 209884,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint around current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 319500,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint around current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 209884,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint below current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 158893,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint below current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 286543,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint below current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 158893,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 192380,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 186496,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 211320,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 253348,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block, large swap, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 204348,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 second swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 192380,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 second swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 186584,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 second swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 205552,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 second swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 247556,
}
`;

exports[`PoolManager gas tests Native Tokens #mint above current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 151106,
}
`;

exports[`PoolManager gas tests Native Tokens #mint above current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 210848,
}
`;

exports[`PoolManager gas tests Native Tokens #mint above current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 151106,
}
`;

exports[`PoolManager gas tests Native Tokens #mint around current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 202815,
}
`;

exports[`PoolManager gas tests Native Tokens #mint around current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 312431,
}
`;

exports[`PoolManager gas tests Native Tokens #mint around current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 202815,
}
`;

exports[`PoolManager gas tests Native Tokens #mint below current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 164245,
}
`;

exports[`PoolManager gas tests Native Tokens #mint below current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 291895,
}
`;

exports[`PoolManager gas tests Native Tokens #mint below current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 164245,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 179736,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 173851,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 198675,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 240704,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block, large swap, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 191703,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 second swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 179736,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 second swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 173940,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 second swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 192907,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 second swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 234911,
}
`;
